<resources>
    <string name="app_name">Pierwsza aplikacja</string>
    <string name="about">O aplikacji</string>
    <string name="newTask">Nowe zadanie</string>
    <string name="theme">Temat</string>
    <string name="themeHint">Wpisz temat zadania</string>
    <string name="details">Szczegóøy</string>
    <string name="detailsHint">Szczegóøy zadania</string>
    <string name="remaindDate">Data wykonania zadania</string>
    <string name="remaindDateHint">Podaj daté wykonania zadania</string>
    <string name="status">Status zadania</string>
    <string name="priority">Priorytet</string>
    <string name="editTask">Edycja zadania</string>
    <string name="editTaskBtn">Zapisz</string>
    <string name="newTaskBtn">Dodaj</string>
    <string name="listClosedTask">Zadania zamknięte</string>
    <string-array name="status">
        <item>Nowe</item>
        <item>Wykonywane</item>
        <item>Zakończone</item>
    </string-array>
    <string-array name="priority">
        <item>Niski</item>
        <item>Średni</item>
        <item>Wysoki</item>
    </string-array>
</resources>
