<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.ciszemar.androidfirstapp.NewTaskActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <TextView
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newTask" />

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"/>

    <EditText
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/themeHint"/>

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"/>

    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detailsHint"/>

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

    <Spinner
        android:id="@+id/statusId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"/>

    <Spinner
        android:id="@+id/priorityId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remaindDate"/>

    <EditText
        android:id="@+id/remaindDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remaindDateHint"/>

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:text="Dodaj"/>

</LinearLayout>
